// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="uui-progress_bar root size-12 container"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      class="bar bar"
      role="progressbar"
      style="width: 20%;"
    />
    <div
      class="label label"
    >
      20%
    </div>
    <div
      class="label topLabel"
      style="clip-path: inset(0 0 0 20%);"
    >
      20%
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar should be rendered correctly with custom label 1`] = `
<DocumentFragment>
  <div
    class="uui-progress_bar root size-18 container"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="56"
      class="bar bar"
      role="progressbar"
      style="width: 56%;"
    />
    <div
      class="label label"
    >
      5/10
    </div>
    <div
      class="label topLabel"
      style="clip-path: inset(0 0 0 56%);"
    >
      5/10
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBar should be rendered correctly with striped animation 1`] = `
<DocumentFragment>
  <div
    class="uui-progress_bar root size-18 striped container"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="56"
      class="bar bar"
      role="progressbar"
      style="width: 56%;"
    />
  </div>
</DocumentFragment>
`;

exports[`ProgressBar should be rendered correctly without label 1`] = `
<DocumentFragment>
  <div
    class="uui-progress_bar root size-18 container"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="56"
      class="bar bar"
      role="progressbar"
      style="width: 56%;"
    />
  </div>
</DocumentFragment>
`;
